# lich13CPA

./: .gitignore  MAC_BUILD_COMMANDS.txt  README.md  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.node.json  tsup.config.ts  vite.config.ts
.github/workflows/: release-build.yml
electron/: main.ts  preload.ts
scripts/: Fix_And_Open_lich13CPA.command  after-pack.cjs  create-mac-minimal-package.mjs  dev-app.mjs  fix-and-open-helper.applescript  fix-and-open-helper.sh  generate-icon.ps1  postprocess-macos-dmg.sh  prepare-mac-build.mjs  prepare-tauri-bundled-binary.mjs  prepare-win-binaries.mjs  set-app-version.mjs  update-usage-pricing.mjs
shared/: types.ts
src/: App.css  App.tsx  cliproxyBridge.ts  electron.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  runtime.rs
