[package]
name = "lich13cpa-tauri"
version = "0.1.0"
description = "Tauri 2 desktop shell for lich13CPA"
authors = ["lich13"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lich13cpa_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
env_proxy = "0.4.1"
flate2 = "1.1"
notify = "8.2.0"
reqwest = { version = "0.12", default-features = false, features = ["charset", "gzip", "http2", "json", "macos-system-configuration", "rustls-tls"] }
regex = "1.12"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
log = "0.4"
open = "5.3.3"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
sysproxy = "0.3.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
url = "2.5"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
